Close button doesn't appear on mobile menu (https://github.com/FrontEnd-ro/frontend.ro/issues/455)

--- a/client/components/layout/AsideMenu/AsideMenu.module.scss
+++ b/client/components/layout/AsideMenu/AsideMenu.module.scss
@@ -22,10 +22,6 @@
     h2 {
       margin: 0;
     }
-  
-    button {
-      width: 1.5em;
-    }
   }
 }
 
